--- a/index.html
+++ b/index.html
@@ -15,24 +15,24 @@
             <span class="logo__name">Trafalgar</span>
           </div>
 
-		  <nav role="navigation" class="hamburger">
-			<div id="menuToggle">
+            <nav role="navigation" class="hamburger">
+            <div id="menuToggle">
 
-			<input type="checkbox" />
+              <input type="checkbox" />
 
-			<span></span>
-			<span></span>
-			<span></span>
+              <span></span>
+              <span></span>
+              <span></span>
 
-			<ul id="menu">
-				<a href="#" class="nav__item__link"><li class="nav__item">Home</li></a>
-				<a href="#" class="nav__item__link"><li class="nav__item">Find a doctor</li></a>
-				<a href="#" class="nav__item__link"><li class="nav__item">Apps</li></a>
-				<a href="#" class="nav__item__link"><li class="nav__item">Testimonials</li></a>
-				<a href="#" class="nav__item__link"><li class="nav__item">About us</li></a>
-			</ul>
-			</div>
-		</nav>
+              <ul id="menu">
+                <a href="#" class="nav__item__link"><li class="nav__item">Home</li></a>
+                <a href="#" class="nav__item__link"><li class="nav__item">Find a doctor</li></a>
+                <a href="#" class="nav__item__link"><li class="nav__item">Apps</li></a>
+                <a href="#" class="nav__item__link"><li class="nav__item">Testimonials</li></a>
+                <a href="#" class="nav__item__link"><li class="nav__item">About us</li></a>
+              </ul>
+            </div>
+          </nav>
 
           <nav class="header__nav">
             <ul>
@@ -113,7 +113,7 @@
           </div>
         </div>
       </div>
-      <container class="container">
+      <section class="container">
         <div class="block">
           <div class="services__variant">
             <img src="img/lens.svg" class="variant__img" />
@@ -165,21 +165,22 @@
             </p>
           </div>
         </div>
-	  </container>
+	  </section>
 	  <br></br>
       <div class="block">
         <button>
           <span>Learn more</span>
         </button>
       </div>
-      <img src="img/Frame.svg" class="services__image" />
+      <div class="services__image">
+      </div>
     </section>
 
 	
-    <footer class="footer">
+  <footer class="footer">
 		<div class="footer__links">
       <div class="block">
-		<img src="img/trafalgar.svg" class="footer__img"/>
+		    <img src="img/trafalgar.svg" class="footer__img"/>
         <ul class="footer__nav">
           <li class="footer__sign"><a class="footer__a" href="">Company</a></li>
           <li class="footer__sign"><a class="footer__a" href="">Region</a></li>
@@ -187,6 +188,6 @@
         </ul>
 	  </div>
 	</div>
-    </footer>
+  </footer>
   </body>
 </html>
